# fantasy_football_app

./: README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: app.py
app/chart/: all_time_standings.py  draft_pick_player_positions.py  scoring_box_plots.py
app/chart/helpers/: charter.py
app/sql/: all_time_standings.sql  draft_pick_player_positions.sql  matchups_h2h.sql  top_single_week_scores.sql
chart/: all_time_standings.py  draft_pick_player_positions.py  scoring_box_plots.py  top_single_week_scores.py
chart/helpers/: charter.py  constants.py
sql/: all_time_standings.sql  favorite_players.sql  matchups_h2h.sql  top_single_week_scores.sql
